--- a/notebook/mongo_db.ipynb
+++ b/notebook/mongo_db.ipynb
@@ -2,11 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pymongo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "data = pd.read_csv('diabetes.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = data.to_dict(orient='records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DB_name ='diabetes'\n",
+    "collection_name = \"diabetes\"\n",
+    "connection_url = 'mongodb+srv://vision:V@cluster0.opokr71.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = pymongo.MongoClient(connection_url)\n",
+    "data_base = client[DB_name]\n",
+    "collection = data_base[collection_name]\n",
+    "rec = collection.insert_many(df)"
    ]
   },
   {
